Tue Apr 25 01:41:52 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* I'm bored, and a little drunk, so I made it pass -pedantic, for
	kicks.

Mon Apr 24 22:29:52 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Make sure nothing's cached.

Mon Apr 24 19:53:23 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Changed some of the debugging macros.
	* Found and fixed wasted extra loops in option file parsing.

Mon Apr 24 16:48:15 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Feh is hereby rereleased under a less restrictive license. Much
	as I want to propagate Free software, I don't want to be a Free
	software Nazi. Do with it what you wish.
	* Various fixups, tweaks, and readability improvements.

Mon Apr 24 04:47:44 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Finally got off my arse and made the text center under the
	images in index mode.

Mon Apr 24 04:21:49 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now that I have the config file, feh can safely be called
	without any paramters, they can all be defined in the theme.
	This leaves my:
	if(argc < 2) show_usage();
	looking pretty stupid.

Mon Apr 24 03:53:16 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added --fontpath, to allow an extra directory to be specified in
	which to look for fonts. You can add this to /etc/fehrc or
	~/.fehrc to make it permanent. Something like:
	feh --fontpath /usr/share/ttfonts

Sat Apr 22 01:48:46 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* A slideshow delay of zero is now permitted. It means "go as fast
	as you can". I like it ;-) You can pause with the middle mouse
	button.

Wed Apr 19 19:42:45 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -g, --collage. Collage mode is like montage mode, except
	the image thumbnails are distributed randomly. Run test26 for an
	example.

Tue Apr 11 18:20:21 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Make included getopt actually work if needed :)

Sat Mar 25 17:42:43 2000  Tom Gilbert  <gilbertt@btinternet.com>
