@@ -1,3 +1,7 @@
+Thu Apr 27 03:29:33 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Progressive loading api change.
+
 Tue Apr 25 01:41:52 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* I'm bored, and a little drunk, so I made it pass -pedantic, for
